src/main/logging/objects/LoggerConfig__mdt/LoggerConfig__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for apex logging utilities</description>
    <label>Logger Config</label>
    <pluralLabel>Logger Configs</pluralLabel>
</CustomObject>