src/main/logging/objects/LoggerConfig__mdt/fields/Flush_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Flush_Threshold__c</fullName>
    <defaultValue>&quot;WARN&quot;</defaultValue>
    <label>Flush Threshold</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DEBUG</fullName>
                <default>true</default>
                <label>DEBUG</label>
            </value>
            <value>
                <fullName>INFO</fullName>
            </value>
            <value>
                <fullName>WARN</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>NONE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>