src/main/logging/objects/LoggerConfig__mdt/fields/Logger_Class__c.field-meta.xml
<CustomField>
    <fullName>Logger_Class__c</fullName>
    <description>Class name of the Logger to use</description>
    <label>Logger Class</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>